--- a/src/Pages/Category/AllCourses/AllCourses.css
+++ b/src/Pages/Category/AllCourses/AllCourses.css
@@ -5,9 +5,14 @@
     margin: 30px 20px;
 }
 
-@media screen and (max-width:1100px) {
+@media screen and (max-width:500px) {
     .card-container{
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+    @media screen and (min-width:501px) and (max-width: 1050px) {
+        .card-container{
+            grid-template-columns: repeat(2, 1fr);   
     }
 }
 
