--- a/src/Pages/Category/Courses/Courses.css
+++ b/src/Pages/Category/Courses/Courses.css
@@ -5,8 +5,13 @@
     margin: 30px 20px;
 }
 
-@media screen and (max-width:1100px) {
-    .course-container {
-        grid-template-columns: repeat(2, 1fr);
+@media screen and (max-width:500px) {
+    .course-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+    @media screen and (min-width:501px) and (max-width: 1050px) {
+        .course-container{
+            grid-template-columns: repeat(2, 1fr);   
     }
 }
